added a few more comments

--- a/classifier_week2.ipynb
+++ b/classifier_week2.ipynb
@@ -4,6 +4,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# GOAL\n",
+    "\n",
+    "We're going to be building a model that can classify fruits. \n",
+    "\n",
+    "Steps to get there: \n",
+    "1. Install Dependencies and Setup\n",
+    "2. Perform some data exploration\n",
+    "3. Load data in from kaggle \n",
+    "4. Scale data to be in the correct format for our model\n",
+    "5. Make seperate training, validation, and testing sets\n",
+    "6. Build custom deep learning model (hint add multiple input, output, and hidden layers)\n",
+    "7. Train model (hint hint use the fit() function)\n",
+    "8. Plot performance (how well did we do?!?!?) \n",
+    "9. Do some quick testing with our own image\n",
+    "10. Save the model\n",
+    "11. #DONE \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 1. Install Dependencies and Setup"
    ]
   },
@@ -15,21 +37,37 @@
     "\n",
     "https://docs.google.com/document/d/1Nbtx1lg2J6yfMFdQdcewOzdcUaUSZ7qScDBjyGNJVQE/edit?usp=sharing\n",
     "\n",
-    "^^^ Do all of this stuff first before proceeding here! ^^^"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Note: The first time you do this in Visual Studio Code, it may ask you which Python environment to use. Select the one you previously initialized."
+    "^^^ Do all of this stuff first before proceeding here! ^^^\n",
+    "\n",
+    "\n",
+    "By the way, here are some useful definitions that you should know. \n",
+    "\n",
+    "Labels: targets - in this case, the fruit. \n",
+    "\n",
+    "Features/inputs: inputs - in this case, the image. \n",
+    "\n",
+    "Training data - the data we feed to our model. \n",
+    "\n",
+    "Validation data - the data we use to evaluate our model to see how well it trained.\n",
+    "\n",
+    "Testing data - the data we use to test our model to see how well it generalizes (i.e. how well it performs on recognizing a fruit.)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe kernel failed to start as '/Users/maryjojohnson/Library/Python/3.12/lib/python/site-packages/psutil/_psutil_osx.abi3.so' could not be imported from '/Users/maryjojohnson/Library/Python/3.12/lib/python/site-packages/psutil/_psutil_osx.abi3.so, 0x0002'.\n",
+      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresModuleImportErrFromFile'>here</a> for more info."
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import os"
@@ -41,26 +79,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Avoid OOM errors by setting GPU Memory Consumption Growth\n",
-    "# This was in a tutorial. Not sure if it's really necessary but run just in case..\n",
+    "##! ARE YOU A WINDOWS USER OR HAVE A GPU ON YOUR COMPUTER? UNCOMMENT THIS CELL!!!!!!!!!!\n",
+    "# (ew)\n",
     "\n",
-    "## IMPORTANT: If you are on Windows, uncomment this line: ##\n",
     "# os.environ[\"CUDA_VISIBLE_DEVICES\"] = \"-1\"\n",
-    "gpus = tf.config.experimental.list_physical_devices('GPU')\n",
-    "for gpu in gpus: \n",
-    "    tf.config.experimental.set_memory_growth(gpu, True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "# Shows us which GPUs our system has access to. It's okay if you don't have any.\n",
-    "tf.config.list_physical_devices('GPU')"
+    "# gpus = tf.config.experimental.list_physical_devices('GPU')\n",
+    "# for gpu in gpus: \n",
+    "#     tf.config.experimental.set_memory_growth(gpu, True)\n",
+    "\n",
+    "# tf.config.list_physical_devices('GPU')"
    ]
   },
   {
@@ -71,13 +98,28 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ok - So, the goal here is going to be to split up our training data in order to train our models \n",
+    "\n",
+    "Like we said in the doc, we need to split our data into training, validation, and testing sets. \n",
+    "\n",
+    "We're going to start by simply writing our directory and checking out what our data looks like. \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "import cv2\n",
-    "from PIL import Image"
+    "from PIL import Image\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import tensorflow as tf\n",
+    "import os\n"
    ]
   },
   {
@@ -96,7 +138,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "All this cell below is doing is just checking out what our data actually looks like."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'matplotlib'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmatplotlib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mimage\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mmpimg\u001b[39;00m\n\u001b[1;32m      3\u001b[0m img \u001b[38;5;241m=\u001b[39m mpimg\u001b[38;5;241m.\u001b[39mimread(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m../input/fruits/fruits-360/Training/Apple Braeburn/100_100.jpg\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(img\u001b[38;5;241m.\u001b[39mshape)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'matplotlib'"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.image as mpimg\n",
+    "\n",
+    "img = mpimg.imread('../input/fruits/fruits-360/Training/Apple Braeburn/100_100.jpg')\n",
+    "print(img.shape)\n",
+    "plt.imshow(img)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 3. Load Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cool - so we see what our data looks like. Now we're going to load it into our model. "
    ]
   },
   {
@@ -107,6 +188,13 @@
    "source": [
     "import numpy as np\n",
     "from matplotlib import pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A machine learning model needs to be in the right shape and format in order to be trained. "
    ]
   },
   {
@@ -141,6 +229,17 @@
     "# 32 images per batch, 100x100, 3 channels (R, G, B)\n",
     "batch = data_iterator.next()\n",
     "batch[0].shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Real quick, what is this doing? \n",
+    "\n",
+    "This is taking our data and formatting it into a shape that our model can understand. \n",
+    "\n",
+    "We're going to scale our data down to a range between 0 and 1. \n"
    ]
   },
   {
@@ -220,9 +319,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 6 Create Validation Set\n",
+    "# 6. Create Validation Set\n",
     "\n",
-    "Steal from our training set to form our validation set. This is not usually optimal, but should work for our purposes, especially since we've now shuffled our data when we pull from our Fruits Training directory"
+    "Now, lets set up our validation set. \n",
+    "\n",
+    "We're going to steal from our training set to form our validation set. This is not usually optimal, but should work for our purposes, especially since we've now shuffled our data when we pull from our Fruits Training directory"
    ]
   },
   {
@@ -258,7 +359,7 @@
    "metadata": {},
    "source": [
     "# 7. Build Deep Learning Model\n",
-    "(We will get into this more the second week)"
+    "This can get complicated - so if you made it this far, you're doing great! (We will get into this more the second week)"
    ]
   },
   {
@@ -318,6 +419,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, time to train our model! "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -333,6 +441,13 @@
    "outputs": [],
    "source": [
     "tensorboard_callback = tf.keras.callbacks.TensorBoard(log_dir=logdir)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Think of how many epochs you want to train for (hint hint what you will use for your validation data)"
    ]
   },
   {
@@ -389,7 +504,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 10. Throw in our own image"
+    "# 10. Quick Test-Throw in our own image"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's put our image into the model and see how well it does. "
    ]
   },
   {
@@ -426,13 +548,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 11. Predict our image"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -445,7 +560,17 @@
     "\n",
     "# This takes the argmax (shows us our predicted class)\n",
     "predicted_class_index = np.argmax(yhat[0])\n",
-    "print(predicted_class_index)\n"
+    "print(predicted_class_index)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, we want more than just the class number... we want its name so we can use it in the API!\n",
+    "\n",
+    "This is the (kind of) gross and inefficient way we found of doing it...\n",
+    "Feel free to implement this differently if you like- perhaps by outputting the dictionary then hardcoding it"
    ]
   },
   {
@@ -454,11 +579,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# However, we want more than just the class number... we want its name so we can use it in the API!\n",
-    "\n",
-    "# This is the (kind of) gross and inefficient way we found of doing it...\n",
-    "# Feel free to implement this differently if you like- perhaps by outputting the dictionary then hardcoding it\n",
-    "\n",
     "# TODO: Replace \"Test\" with the name of your testing or training directory\n",
     "\n",
     "# Goes thorugh your directory, sorts each name alphabetically.\n",
@@ -514,7 +634,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.10.5"
   }
  },
  "nbformat": 4,
