flatten + activation imports

--- a/classifier_week2.ipynb
+++ b/classifier_week2.ipynb
@@ -369,7 +369,7 @@
    "outputs": [],
    "source": [
     "from tensorflow.keras.models import Sequential\n",
-    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Dense, Dropout, GlobalAveragePooling2D, BatchNormalization\n",
+    "from tensorflow.keras.layers import Conv2D, MaxPooling2D, Dense, Dropout, GlobalAveragePooling2D, BatchNormalization, Flatten, Activation\n",
     "from tensorflow.keras.regularizers import l2"
    ]
   },
