--- a/classifier_week2.ipynb
+++ b/classifier_week2.ipynb
@@ -459,7 +459,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 9. Plot Performance"
+    "# 9. Plot & Evaluate Performance\n"
    ]
   },
   {
@@ -490,6 +490,45 @@
     "fig.suptitle('Accuracy', fontsize=20)\n",
     "plt.legend(loc=\"upper left\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import necessary metrics from tensorflow\n",
+    "from tensorflow.keras.metrics import Precision, Recall\n",
+    "from sklearn.metrics import accuracy_score, precision_recall_fscore_support\n",
+    "\n",
+    "# Function to evaluate the model\n",
+    "def evaluate_model(model, test_data):\n",
+    "    # Get predictions and true labels\n",
+    "    all_preds = []\n",
+    "    all_labels = []\n",
+    "    \n",
+    "    # Iterate through the test dataset\n",
+    "    for images, labels in test_data:\n",
+    "        # Get predictions\n",
+    "        predictions = model.predict(images, verbose=0)\n",
+    "        pred_classes = np.argmax(predictions, axis=1)\n",
+    "        \n",
+    "        # Append to lists\n",
+    "        all_preds.extend(pred_classes)\n",
+    "        all_labels.extend(labels)\n",
+    "\n",
+    "    # Calculate metrics\n",
+    "    accuracy = accuracy_score(all_labels, all_preds)\n",
+    "    precision, recall, f1, _ = precision_recall_fscore_support(all_labels, all_preds, average='weighted')\n",
+    "\n",
+    "    print(f'Accuracy: {accuracy:.4f}')\n",
+    "    print(f'Precision: {precision:.4f}')\n",
+    "    print(f'Recall: {recall:.4f}')\n",
+    "    print(f'F1 Score: {f1:.4f}')\n",
+    "\n",
+    "# Evaluate the model using our test dataset\n",
+    "evaluate_model(model, test)"
    ]
   },
   {
